--- a/index.html
+++ b/index.html
@@ -27,20 +27,20 @@
     <header>
        
 
-       <nav class="navbar navbar-expand-sm justify-content-end" style="background-color:#dc9c8c">
+       <nav class="navbar navbar-expand-sm" style="background-color:#dc9c8c">
         <text class="navbar-brand">Amy Horne, Ph.D.</text>
         <button aria-label="toggle menu" class="navbar-toggler ml-auto mr-1" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
         </button>
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="nav navbar-nav navbar-right menu">
-           <li class="nav-item menu-item mr-auto">
+        <div class="collapse navbar-collapse w-100 order-3 dual-collapse2" id="collapsibleNavbar">
+        <ul class="nav navbar-nav ml-auto menu">
+           <li class="nav-item menu-item">
                 <a class="nav-link" style="color:black;" href="index.html">Home</a>
            </li>
-           <li class="nav-item menu-item mr-auto">
+           <li class="nav-item menu-item">
                 <a class="nav-link" style="color:black;" href="aboutme.html">About Me</a>
            </li>
-           <li class="nav-item dropdown menu-item mr-auto">
+           <li class="nav-item dropdown menu-item">
                 <a class="nav-link dropdown-toggle" style="color:black;" href="#" id="navbardrop" data-toggle="dropdown">Forms</a>
                 <div class="dropdown-menu dropdown-menu-right animate slideIn">
                     <a class="dropdown-item" href="forms/Patient_Intake_Information_Form.pdf" target="_blank">Patient Intake Information Form</a>
