--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <button aria-label="toggle menu" class="navbar-toggler ml-auto mr-1" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
         </button>
-        <div class="collapse navbar-collapse order-3 dual-collapse2 text-right" id="collapsibleNavbar">
-        <ul class="nav navbar-nav ml-auto menu">
+        <div class="navbar-collapse collapse w-100 order-3 dual-collapse2" id="collapsibleNavbar">
+        <ul class="navbar-nav ml-auto menu">
            <li class="nav-item menu-item">
                 <a class="nav-link" style="color:black;" href="index.html">Home</a>
            </li>
