--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
       </button>
       <div class="navbar-collapse collapse w-100 order-3 dual-collapse2" id="collapsibleNavbar">
-        <ul class="navbar-nav menu ml-auto">
+        <ul class="navbar-nav menu mr-auto">
           <li class="nav-item menu-item">
             <a class="nav-link" style="color:black;" href="index.html">Home</a>
           </li>
