--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
   <header>
 
 
-    <nav class="navbar navbar-expand-lg" style="background-color:#dc9c8c">
+    <nav class="navbar navbar-expand-lg " style="background-color:#dc9c8c">
       <text class="navbar-brand">Amy Horne, Ph.D.</text>
-      <button aria-label="toggle menu" class="navbar-toggler ml-auto mr-1" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      <button aria-label="toggle menu" class="navbar-toggler-right" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
       </button>
       <div class="navbar-collapse collapse justify-content-end" id="collapsibleNavbar">
