--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <header>
 
 
-    <nav class="navbar navbar-expand-lg " style="background-color:#dc9c8c">
+    <nav class="navbar navbar-expand-lg " style="background-color:#dc9c8c; flex-grow: 1;">
       <text class="navbar-brand">Amy Horne, Ph.D.</text>
       <button aria-label="toggle menu" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
