--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <button aria-label="toggle menu" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
       </button>
-      <div class="navbar-collapse collapse justify-content-end w-10" id="collapsibleNavbar">
+      <div class="navbar-collapse collapse justify-content-end" id="collapsibleNavbar">
         <ul class="navbar-nav menu ml-auto">
           <li class="nav-item menu-item">
             <a class="nav-link" style="color:black;" href="index.html">Home</a>
