--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
   <header>
 
 
-    <nav class="navbar navbar-expand-lg " style="background-color:#dc9c8c; flex-grow: 1;">
+    <nav class="navbar navbar-expand-sm " style="background-color:#dc9c8c">
       <text class="navbar-brand">Amy Horne, Ph.D.</text>
       <button aria-label="toggle menu" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
       </button>
-      <div class="navbar-collapse collapse w-100 justify-content-end ml-auto" id="collapsibleNavbar">
-        <ul class="navbar-nav menu ml-auto">
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav menu">
           <li class="nav-item menu-item">
             <a class="nav-link" style="color:black;" href="index.html">Home</a>
           </li>
