--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       <button aria-label="toggle menu" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
       </button>
-      <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav menu">
+      <div class="navbar-collapse collapse w-100 order-3 dual-collapse2" id="collapsibleNavbar">
+        <ul class="navbar-nav menu ml-auto">
           <li class="nav-item menu-item">
             <a class="nav-link" style="color:black;" href="index.html">Home</a>
           </li>
