--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
       <button aria-label="toggle menu" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
       </button>
-      <div class="navbar-collapse collapse w-100 order-3 dual-collapse2" id="collapsibleNavbar">
+      <div class="navbar-collapse collapse w-100 order-3" id="collapsibleNavbar">
         <ul class="navbar-nav menu ml-auto">
           <li class="nav-item menu-item">
-            <a class="nav-link" style="color:black;" href="index.html">Home testing</a>
+            <a class="nav-link" style="color:black;" href="index.html">Home</a>
           </li>
           <li class="nav-item menu-item">
             <a class="nav-link" style="color:black;" href="aboutme.html">About Me</a>
