--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="navbar-collapse collapse w-100" id="collapsibleNavbar" style="justify-content:flex-end !important;">
         <ul class="navbar-nav menu ml-auto">
           <li class="nav-item menu-item">
-            <a class="nav-link" style="color:black;" href="index.html">Home</a>
+            <a class="nav-link" style="color:black;" href="index.html">Home test</a>
           </li>
           <li class="nav-item menu-item">
             <a class="nav-link" style="color:black;" href="aboutme.html">About Me</a>
