--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <header>
 
 
-    <nav class="navbar navbar-expand-sm " style="background-color:#dc9c8c flex">
+    <nav class="navbar navbar-expand-sm " style="background-color:#dc9c8c;">
       <text class="navbar-brand">Amy Horne, Ph.D.</text>
       <button aria-label="toggle menu" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
@@ -36,7 +36,7 @@
       <div class="navbar-collapse collapse w-100" id="collapsibleNavbar" style="justify-content:flex-end !important;">
         <ul class="navbar-nav menu ml-auto">
           <li class="nav-item menu-item">
-            <a class="nav-link" style="color:black;" href="index.html">Home test</a>
+            <a class="nav-link" style="color:black;" href="index.html">Home</a>
           </li>
           <li class="nav-item menu-item">
             <a class="nav-link" style="color:black;" href="aboutme.html">About Me</a>
