--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
       </button>
       <div class="navbar-collapse collapse w-100" id="collapsibleNavbar" style="justify-content:flex-end !important;">
-        <ul class="nav navbar-nav menu ml-auto justify-content-end">
+        <ul class="nav navbar-nav ml-auto justify-content-end">
           <li class="nav-item menu-item">
-            <a class="nav-link" style="color:black;" href="index.html">Home test</a>
+            <a class="nav-link" style="color:black;" href="index.html">Home</a>
           </li>
           <li class="nav-item menu-item">
             <a class="nav-link" style="color:black;" href="aboutme.html">About Me</a>
