--- a/aboutme.html
+++ b/aboutme.html
@@ -33,7 +33,7 @@
         <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
       </button>
       <div class="navbar-collapse collapse w-100" id="collapsibleNavbar" style="justify-content:flex-end !important;">
-        <ul class="nav navbar-nav ml-auto justify-content-end menu">
+        <ul class="nav navbar-nav ml-auto justify-content-end">
           <li class="nav-item menu-item">
             <a class="nav-link" style="color:black;" href="index.html">Home</a>
           </li>
