--- a/aboutme.html
+++ b/aboutme.html
@@ -76,7 +76,7 @@
          <div class="row">
             <div class="col">
                <div class="text-left">
-                  <p>&copy; <span id="currentYear"></span> Amy Horne, Ph.D. All Rights Reserved</p>
+                  <p>&copy; <span id="currentYear"></span> Amy Horne, Ph.D. All Rights Reserved. Site design by <a href="https://www.dangause.com/" target="_blank">Dan Gause</a>.</p>
                </div>
             </div>
          </div>
