--- a/index.html
+++ b/index.html
@@ -103,22 +103,6 @@ border-color:black;">
 
 
 
-      <!---
-            <div class="row">
-               <div class="column">
-                  <address class="text-center">
-                     <p>Dr. Amy Horne</p>
-                     <a href="https://www.google.com/maps/place/125+N+Acacia+Ave+%23113,+Solana+Beach,+CA+92075/@32.9925,-117.2750589,17z/data=!3m1!4b1!4m5!3m4!1s0x80dc0ecddd4e5043:0xf3745e49ed25740d!8m2!3d32.9924955!4d-117.2728702" target="_blank">125 N. Acacia Ave., Suite 113, Solana Beach, CA 92075</a>
-                     <p></p>
-                     <p><i class="fas fa-mobile-alt"></i> (858) 350-8788</p>
-                     <p><i class="fas fa-at"></i> <a href="mailto:dramyhorne@gmail.com">dramyhorne@gmail.com</a></p>
-                  </address>
-                  <iframe title="location map" width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=-117.27440714836122%2C32.99091947756095%2C-117.27104902267456%2C32.99349312114543&amp;layer=mapnik&amp;marker=32.99221015781092%2C-117.27272760355845" style="border: 1px solid #777"></iframe>
-               </div>
-            </div>
-
-        --->
-
 
 
     </section>
@@ -127,7 +111,7 @@ border-color:black;">
     <div class="row">
       <div class="col">
         <div class="text-left">
-          <p>&copy; <span id="currentYear"></span> Amy Horne, Ph.D. All Rights Reserved</p>
+          <p>&copy; <span id="currentYear"></span> Amy Horne, Ph.D. All Rights Reserved. Site design by <a href="https://www.dangause.com/" target="_blank">Dan Gause</a>.</p>
         </div>
       </div>
     </div>
