--- a/aboutme.html
+++ b/aboutme.html
@@ -63,7 +63,7 @@
          <section>
             <div class="row" style="background-color:#fffcfc">
                <div class="column text-center">
-                  <h2><br><span class="menu">About me</span> section coming soon!</h2>
+                  <h2><br><span style="font-size:110%;"><b>ABOUT ME</b></span> section coming soon!</h2>
                </div>
             </div>
          </section>
