--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ border-color:black;">
     <section>
       <div class="row" style="background-color:#fffcfc">
         <div class="column text-center">
-          <h2><br>Hours by appointment, please call (858) 350-8788<br>Telehealth available<br><br></h2>
+          <h2><br>To contact please email<br> <br><br></h2>
         </div>
       </div>
 
@@ -94,7 +94,7 @@ border-color:black;">
         </div>
         <div class="column">
           <address class="text-center vcenter">
-            <h4>Office Address:<br><a href="https://www.google.com/maps/place/125+N+Acacia+Ave+%23113,+Solana+Beach,+CA+92075/@32.9925,-117.2750589,17z/data=!3m1!4b1!4m5!3m4!1s0x80dc0ecddd4e5043:0xf3745e49ed25740d!8m2!3d32.9924955!4d-117.2728702"
+            <h4>Mailing Address:<br><a href="https://www.google.com/maps/place/125+N+Acacia+Ave+%23113,+Solana+Beach,+CA+92075/@32.9925,-117.2750589,17z/data=!3m1!4b1!4m5!3m4!1s0x80dc0ecddd4e5043:0xf3745e49ed25740d!8m2!3d32.9924955!4d-117.2728702"
                 target="_blank">125 N. Acacia Ave., Suite 113<br>Solana Beach, CA 92075</a></h4>
             <h4><a href="mailto:dramyhorne@gmail.com">dramyhorne@gmail.com</a></h4>
           </address>
