--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <header class="jumbotron text-center" style="border-radius:30px; background-color:#f4e4e4; border-style:solid; border:5px;
 border-color:black;">
           <h1 class="main-title">Amy Horne, Ph.D.</h1>
-          <h3>Clinical Psychologist<br><br><br>Psychotherapy and Consultation<br>Clinical Supervision</h3>
+          <h3>Clinical Psychologist<br>Retired<br><br>Psychotherapy and Consultation<br>Clinical Supervision</h3>
           <hr style="width:65%; border-color:#000000; height: 6px">
           <h4>Provided psychological services for:<br>Adolescents, College Students and Adults <br><br>Psychotherapy Supervision for Clinicians</h4>
           <h5>CA License PSY8815</h5>
