--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@ border-color:black;">
       <div class="row" style="background-color:#fffcfc">
         <div class="column text-center">
           <h2><br>To contact please email<br> <br><br></h2>
+          <a href="mailto:dramyhorne@gmail.com">dramyhorne@gmail.com</a></h4>
         </div>
       </div>
 
