--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@ border-color:black;">
     <section>
       <div class="row" style="background-color:#fffcfc">
         <div class="column text-center">
-          <h2><br>To contact please email<br> <br><br></h2>
-          <a href="mailto:dramyhorne@gmail.com">dramyhorne@gmail.com</a></h4>
+          <h2><br>To contact please email <a href="mailto:dramyhorne@gmail.com">dramyhorne@gmail.com</a><br> <br><br></h2>
         </div>
       </div>
 
