--- a/index.html
+++ b/index.html
@@ -87,15 +87,8 @@ border-color:black;">
       </div>
 
       <div class="row" style="background-color:#fffcfc">
-        <div class="column">
-          <a href="https://www.google.com/maps/place/125+N+Acacia+Ave+%23113,+Solana+Beach,+CA+92075/@32.9925,-117.2750589,17z/data=!3m1!4b1!4m5!3m4!1s0x80dc0ecddd4e5043:0xf3745e49ed25740d!8m2!3d32.9924955!4d-117.2728702" target="_blank">
-            <img src="gmap.png" alt="gmap" style="width:100%">
-          </a>
-        </div>
-        <div class="column">
-          <address class="text-center vcenter">
-            <h4> 125 N. Acacia Ave., Suite 113<br>Solana Beach, CA 92075<br>(858) 350-8788</h4>
-          </address>
+        <div class="column text-center">
+            <h4> Mailing Address:<br>125 N. Acacia Ave., Suite 113<br>Solana Beach, CA 92075<br>(858) 350-8788</h4>
         </div>
       </div>
 
